cmake_minimum_required (VERSION 2.8.10)

set(LIB_FILES macros.cpp cosmo_mpi.cpp test_framework.cpp whole_matrix.cpp scale_factor.cpp markov_chain.cpp matrix_impl.cpp kd_tree.cpp ucmh_likelihood.cpp)

set(TEST_FILES test_unit_conversions.cpp test_int_operations.cpp test_integral.cpp test_conjugate_gradient.cpp test_polynomial.cpp test_legendre.cpp test_spherical_harmonics.cpp test_matrix.cpp test_wigner_3j.cpp test_table_function.cpp test_cubic_spline.cpp test_three_rotation.cpp test_kd_tree.cpp)

if(LAPACK_LIB_FLAGS)
	set(LIB_FILES ${LIB_FILES} mcmc.cpp)
	set(TEST_FILES ${TEST_FILES} test_mcmc.cpp)
endif(LAPACK_LIB_FLAGS)

if(HEALPIX_DIR)
	set(LIB_FILES ${LIB_FILES} utils.cpp c_matrix.cpp c_matrix_generator.cpp mode_directions.cpp cmb_gibbs.cpp mask_apodizer.cpp)
	set(TEST_FILES ${TEST_FILES} test_mask_apodizer.cpp)
endif(HEALPIX_DIR)

if(CLASS_DIR)
	set(LIB_FILES ${LIB_FILES} cmb.cpp)
	set(TEST_FILES ${TEST_FILES} test_cmb.cpp)
endif(CLASS_DIR)

if(CLASS_DIR)
	set(LIB_FILES ${LIB_FILES} taylor_pk.cpp)
endif(CLASS_DIR)

if(MINUIT_DIR)
	set(TEST_FILES ${TEST_FILES} test_fit.cpp)
endif(MINUIT_DIR)

if(MULTINEST_DIR)
	set(LIB_FILES ${LIB_FILES} mn_scanner.cpp)
	set(TEST_FILES ${TEST_FILES} test_multinest.cpp)
endif(MULTINEST_DIR)

if(POLYCHORD_DIR)
	set(LIB_FILES ${LIB_FILES} polychord_wrapper.f90 polychord.cpp)
	set(TEST_FILES ${TEST_FILES} test_polychord.cpp)
endif(POLYCHORD_DIR)

if(LAPACK_LIB_FLAGS AND HEALPIX_DIR)
	set(LIB_FILES ${LIB_FILES} simulate.cpp likelihood.cpp master.cpp)
endif(LAPACK_LIB_FLAGS AND HEALPIX_DIR)

if(LAPACK_LIB_FLAGS AND HEALPIX_DIR AND CLASS_DIR)
	set(TEST_FILES ${TEST_FILES} test_cmb_gibbs.cpp test_like_high.cpp test_like_low.cpp)
endif(LAPACK_LIB_FLAGS AND HEALPIX_DIR AND CLASS_DIR)

if(CLASS_DIR AND PLANCK_DIR)
	set(LIB_FILES ${LIB_FILES} planck_like.cpp)
	set(TEST_FILES ${TEST_FILES} test_planck_like.cpp)
endif(CLASS_DIR AND PLANCK_DIR)

if(CLASS_DIR AND WMAP9_DIR)
	set(LIB_FILES ${LIB_FILES} wmap9_like.cpp sample.f90)
	set(TEST_FILES ${TEST_FILES} test_wmap9_like.cpp)
endif(CLASS_DIR AND WMAP9_DIR)

if(MODECODE_DIR)
	set(LIB_FILES ${LIB_FILES} modecode.cpp sample.f90)
	set(TEST_FILES ${TEST_FILES} test_modecode.cpp)
endif(MODECODE_DIR)

if(MODECODE_DIR AND PLANCK_DIR AND CLASS_DIR AND MULTINEST_DIR)
	set(TEST_FILES ${TEST_FILES} test_mn_modecode.cpp)
endif(MODECODE_DIR AND PLANCK_DIR AND CLASS_DIR AND MULTINEST_DIR)

if(LAPACK_LIB_FLAGS AND CLASS_DIR AND PLANCK_DIR)
	set(TEST_FILES ${TEST_FILES} test_mcmc_planck.cpp)
endif(LAPACK_LIB_FLAGS AND CLASS_DIR AND PLANCK_DIR)

if(CLASS_DIR AND MULTINEST_DIR AND PLANCK_DIR)
	set(TEST_FILES ${TEST_FILES} test_multinest_planck.cpp)
endif(CLASS_DIR AND MULTINEST_DIR AND PLANCK_DIR)

if(CLASS_DIR AND POLYCHORD_DIR AND PLANCK_DIR)
	set(TEST_FILES ${TEST_FILES} test_polychord_planck.cpp)
endif(CLASS_DIR AND POLYCHORD_DIR AND PLANCK_DIR)

if(LAPACK_LIB_FLAGS)
	set(LIB_FILES ${LIB_FILES} fast_approximator.cpp fast_approximator_error.cpp learn_as_you_go.cpp)
	set(TEST_FILES ${TEST_FILES} test_fast_approximator.cpp test_fast_approximator_error.cpp)
endif(LAPACK_LIB_FLAGS)

if(LAPACK_LIB_FLAGS AND CLASS_DIR AND PLANCK_DIR)
	set(LIB_FILES ${LIB_FILES} planck_like_fast.cpp)
	set(TEST_FILES ${TEST_FILES} test_mcmc_planck_fast.cpp)
endif(LAPACK_LIB_FLAGS AND CLASS_DIR AND PLANCK_DIR)

if(LAPACK_LIB_FLAGS AND CLASS_DIR AND PLANCK_DIR AND MULTINEST_DIR)
	set(TEST_FILES ${TEST_FILES} test_multinest_planck_fast.cpp)
endif(LAPACK_LIB_FLAGS AND CLASS_DIR AND PLANCK_DIR AND MULTINEST_DIR)


add_library(cosmopp STATIC ${LIB_FILES})
install(TARGETS cosmopp DESTINATION lib)

add_executable(cosmo_test test.cpp ${TEST_FILES})
target_link_libraries(cosmo_test cosmopp)
if(MPI_FOUND)
	target_link_libraries(cosmo_test ${MPI_CXX_LIBRARIES})
endif(MPI_FOUND)
if(LAPACK_LIB_FLAGS)
	target_link_libraries(cosmo_test ${LAPACK_LIB_FLAGS})
endif(LAPACK_LIB_FLAGS)
if(HEALPIX_DIR)
	target_link_libraries(cosmo_test ${CHEALPIXLIB} ${HEALPIXCXXLIB} ${CXXSUPPORTLIB} ${SHARPLIB} ${FFTPACKLIB} ${CUTILSLIB})
endif(HEALPIX_DIR)
if(CLASS_DIR)
	target_link_libraries(cosmo_test ${CLASSLIB})
endif(CLASS_DIR)
if(MINUIT_DIR)
	target_link_libraries(cosmo_test ${MINUITLIB})
endif(MINUIT_DIR)
if(MULTINEST_DIR)
	target_link_libraries(cosmo_test ${MULTINESTLIB})
endif(MULTINEST_DIR)
if(POLYCHORD_DIR)
	target_link_libraries(cosmo_test ${POLYCHORDLIB})
	if(MPI_FOUND)
		target_link_libraries(cosmo_test ${MPI_Fortran_LIBRARIES})
	endif(MPI_FOUND)
endif(POLYCHORD_DIR)
if(PLANCK_DIR)
	target_link_libraries(cosmo_test ${PLANCKLIB})
	target_link_libraries(cosmo_test -dynamic)
endif(PLANCK_DIR)
if(WMAP9_DIR)
	target_link_libraries(cosmo_test ${WMAP9LIB})
endif(WMAP9_DIR)
if(MODECODE_DIR)
	target_link_libraries(cosmo_test ${MODECODELIB})
endif(MODECODE_DIR)
if(CFITSIO_DIR)
	target_link_libraries(cosmo_test ${CFITSIOLIB})
endif(CFITSIO_DIR)
install(TARGETS cosmo_test DESTINATION bin)

if(CLASS_DIR AND PLANCK_DIR AND MULTINEST_DIR AND MODECODE_DIR AND POLYCHORD_DIR)
    add_executable(run_inst_ucmh run_inst_ucmh.cpp)
    target_link_libraries(run_inst_ucmh cosmopp)
    if(MPI_FOUND)
        target_link_libraries(run_inst_ucmh ${MPI_CXX_LIBRARIES})
        target_link_libraries(run_inst_ucmh ${MPI_Fortran_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(run_inst_ucmh ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(run_inst_ucmh ${CFITSIOLIB})
    endif(CFITSIO_DIR)
	target_link_libraries(run_inst_ucmh ${CLASSLIB})
	target_link_libraries(run_inst_ucmh ${PLANCKLIB})
	target_link_libraries(run_inst_ucmh ${MULTINESTLIB})
    target_link_libraries(run_inst_ucmh ${POLYCHORDLIB})
	target_link_libraries(run_inst_ucmh ${MODECODELIB})

    add_executable(run_modecode_ucmh run_modecode_ucmh.cpp)
    target_link_libraries(run_modecode_ucmh cosmopp)
    if(MPI_FOUND)
        target_link_libraries(run_modecode_ucmh ${MPI_CXX_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(run_modecode_ucmh ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(run_modecode_ucmh ${CFITSIOLIB})
    endif(CFITSIO_DIR)
	target_link_libraries(run_modecode_ucmh ${CLASSLIB})
	target_link_libraries(run_modecode_ucmh ${PLANCKLIB})
	target_link_libraries(run_modecode_ucmh ${MULTINESTLIB})
	target_link_libraries(run_modecode_ucmh ${MODECODELIB})

    add_executable(run_modecode_knotted run_modecode_knotted.cpp)
    target_link_libraries(run_modecode_knotted cosmopp)
    if(MPI_FOUND)
        target_link_libraries(run_modecode_knotted ${MPI_CXX_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(run_modecode_knotted ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(run_modecode_knotted ${CFITSIOLIB})
    endif(CFITSIO_DIR)
	target_link_libraries(run_modecode_knotted ${CLASSLIB})
	target_link_libraries(run_modecode_knotted ${PLANCKLIB})
	target_link_libraries(run_modecode_knotted ${MULTINESTLIB})
	target_link_libraries(run_modecode_knotted ${MODECODELIB})

    add_executable(mn_planck_run_run mn_planck_run_run.cpp)
    target_link_libraries(mn_planck_run_run cosmopp)
    if(MPI_FOUND)
        target_link_libraries(mn_planck_run_run ${MPI_CXX_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(mn_planck_run_run ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(mn_planck_run_run ${CFITSIOLIB})
    endif(CFITSIO_DIR)
    target_link_libraries(mn_planck_run_run ${LAPACK_LIB_FLAGS})
    target_link_libraries(mn_planck_run_run ${CLASSLIB})
    target_link_libraries(mn_planck_run_run ${PLANCKLIB})
    target_link_libraries(mn_planck_run_run ${MULTINESTLIB})
    target_link_libraries(mn_planck_run_run ${MODECODELIB})

    add_executable(mn_planck_run mn_planck_run.cpp)
    target_link_libraries(mn_planck_run cosmopp)
    if(MPI_FOUND)
        target_link_libraries(mn_planck_run ${MPI_CXX_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(mn_planck_run ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(mn_planck_run ${CFITSIOLIB})
    endif(CFITSIO_DIR)
    target_link_libraries(mn_planck_run ${LAPACK_LIB_FLAGS})
    target_link_libraries(mn_planck_run ${CLASSLIB})
    target_link_libraries(mn_planck_run ${PLANCKLIB})
    target_link_libraries(mn_planck_run ${MULTINESTLIB})
    target_link_libraries(mn_planck_run ${MODECODELIB})

    add_executable(ucmh_mn_test ucmh_mn_test.cpp)
    target_link_libraries(ucmh_mn_test cosmopp)
    if(MPI_FOUND)
        target_link_libraries(ucmh_mn_test ${MPI_CXX_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(ucmh_mn_test ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(ucmh_mn_test ${CFITSIOLIB})
    endif(CFITSIO_DIR)
    target_link_libraries(ucmh_mn_test ${MULTINESTLIB})
endif(CLASS_DIR AND PLANCK_DIR AND MULTINEST_DIR AND MODECODE_DIR AND POLYCHORD_DIR)

if(CLASS_DIR AND PLANCK_DIR AND POLYCHORD_DIR AND MODECODE_DIR)
    add_executable(pc_inst_ucmh pc_inst_ucmh.cpp)
    target_link_libraries(pc_inst_ucmh cosmopp)
    if(MPI_FOUND)
        target_link_libraries(pc_inst_ucmh ${MPI_CXX_LIBRARIES})
        target_link_libraries(pc_inst_ucmh ${MPI_Fortran_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(pc_inst_ucmh ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(pc_inst_ucmh ${CFITSIOLIB})
    endif(CFITSIO_DIR)
	target_link_libraries(pc_inst_ucmh ${CLASSLIB})
	target_link_libraries(pc_inst_ucmh ${PLANCKLIB})
	target_link_libraries(pc_inst_ucmh ${POLYCHORDLIB})
	target_link_libraries(pc_inst_ucmh ${MODECODELIB})

    add_executable(pc_planck_run_run pc_planck_run_run.cpp)
    target_link_libraries(pc_planck_run_run cosmopp)
    if(MPI_FOUND)
        target_link_libraries(pc_planck_run_run ${MPI_CXX_LIBRARIES})
        target_link_libraries(pc_planck_run_run ${MPI_Fortran_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(pc_planck_run_run ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(pc_planck_run_run ${CFITSIOLIB})
    endif(CFITSIO_DIR)
    target_link_libraries(pc_planck_run_run ${CLASSLIB})
    target_link_libraries(pc_planck_run_run ${PLANCKLIB})
    target_link_libraries(pc_planck_run_run ${POLYCHORDLIB})
    target_link_libraries(pc_planck_run_run ${MODECODELIB})

    add_executable(analyze_ucmh analyze_ucmh.cpp)
    target_link_libraries(analyze_ucmh cosmopp)
    if(MPI_FOUND)
        target_link_libraries(analyze_ucmh ${MPI_CXX_LIBRARIES})
        target_link_libraries(analyze_ucmh ${MPI_Fortran_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(analyze_ucmh ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(analyze_ucmh ${CFITSIOLIB})
    endif(CFITSIO_DIR)

    add_executable(derived_ucmh_chain derived_ucmh_chain.cpp)
    target_link_libraries(derived_ucmh_chain cosmopp)
    if(MPI_FOUND)
        target_link_libraries(derived_ucmh_chain ${MPI_CXX_LIBRARIES})
        target_link_libraries(derived_ucmh_chain ${MPI_Fortran_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(derived_ucmh_chain ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(derived_ucmh_chain ${CFITSIOLIB})
    endif(CFITSIO_DIR)
    target_link_libraries(derived_ucmh_chain ${CLASSLIB})
    target_link_libraries(derived_ucmh_chain ${MODECODELIB})
endif(CLASS_DIR AND PLANCK_DIR AND POLYCHORD_DIR AND MODECODE_DIR)

if(CLASS_DIR)
    add_executable(run_classpk run_classpk.cpp)
    target_link_libraries(run_classpk cosmopp)
    if(MPI_FOUND)
        target_link_libraries(run_classpk ${MPI_CXX_LIBRARIES})
        target_link_libraries(run_classpk ${MPI_Fortran_LIBRARIES})
    endif(MPI_FOUND)
    if(LAPACK_LIB_FLAGS)
        target_link_libraries(run_classpk ${LAPACK_LIB_FLAGS})
    endif(LAPACK_LIB_FLAGS)
    if(CFITSIO_DIR)
        target_link_libraries(run_classpk ${CFITSIOLIB})
    endif(CFITSIO_DIR)
    target_link_libraries(run_classpk ${CLASSLIB})
endif(CLASS_DIR)

add_test(NAME unit_conversions COMMAND cosmo_test unit_conversions WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME int_operations COMMAND cosmo_test int_operations WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME integral COMMAND cosmo_test integral WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME conjugate_gradient COMMAND cosmo_test conjugate_gradient WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME polynomial COMMAND cosmo_test polynomial WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME legendre COMMAND cosmo_test legendre WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME spherical_harmonics COMMAND cosmo_test spherical_harmonics WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME matrix COMMAND cosmo_test matrix WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME wigner_3j COMMAND cosmo_test wigner_3j WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME table_function COMMAND cosmo_test table_function WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME cubic_spline COMMAND cosmo_test cubic_spline WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME three_rotation COMMAND cosmo_test three_rotation WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
add_test(NAME kd_tree COMMAND cosmo_test kd_tree WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
if(LAPACK_LIB_FLAGS)
	add_test(NAME mcmc_fast COMMAND cosmo_test mcmc_fast WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
	add_test(NAME fast_approximator COMMAND cosmo_test fast_approximator WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
	add_test(NAME fast_approximator_error COMMAND cosmo_test fast_approximator_error WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
endif(LAPACK_LIB_FLAGS)
if(MULTINEST_DIR)
	add_test(NAME multinest_fast COMMAND cosmo_test multinest_fast WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
endif(MULTINEST_DIR)
if(POLYCHORD_DIR)
	add_test(NAME polychord_fast COMMAND cosmo_test polychord_fast WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
endif(POLYCHORD_DIR)
if(CLASS_DIR)
	add_test(NAME cmb COMMAND cosmo_test cmb WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
endif(CLASS_DIR)
if(MINUIT_DIR)
	add_test(NAME fit COMMAND cosmo_test fit WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
endif(MINUIT_DIR)
if(CLASS_DIR)
	if(PLANCK_DIR)
		add_test(NAME planck_like COMMAND cosmo_test planck_like WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
	endif(PLANCK_DIR)
	if(WMAP9_DIR)
		add_test(NAME wmap9_like COMMAND cosmo_test wmap9_like WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
	endif(WMAP9_DIR)
endif(CLASS_DIR)



if(HEALPIX_DIR)
	add_executable(apodize_mask apodize_mask.cpp)
	target_link_libraries(apodize_mask cosmopp)
	if(MPI_FOUND)
		target_link_libraries(apodize_mask ${MPI_CXX_LIBRARIES})
	endif(MPI_FOUND)
	target_link_libraries(apodize_mask ${CHEALPIXLIB} ${HEALPIXCXXLIB} ${CXXSUPPORTLIB} ${SHARPLIB} ${FFTPACKLIB} ${CUTILSLIB})
	target_link_libraries(apodize_mask ${CFITSIOLIB})
	install(TARGETS apodize_mask DESTINATION bin)
endif(HEALPIX_DIR)


if(LAPACK_LIB_FLAGS AND HEALPIX_DIR)
	add_executable(generate_white_noise generate_white_noise.cpp)
	target_link_libraries(generate_white_noise cosmopp)
	if(MPI_FOUND)
		target_link_libraries(generate_white_noise ${MPI_CXX_LIBRARIES})
	endif(MPI_FOUND)
	target_link_libraries(generate_white_noise ${CHEALPIXLIB} ${HEALPIXCXXLIB} ${CXXSUPPORTLIB} ${SHARPLIB} ${FFTPACKLIB} ${CUTILSLIB})
	target_link_libraries(generate_white_noise ${CFITSIOLIB})
	target_link_libraries(generate_white_noise ${LAPACK_LIB_FLAGS})
	install(TARGETS generate_white_noise DESTINATION bin)
endif(LAPACK_LIB_FLAGS AND HEALPIX_DIR)
